# kkk

./: .gitignore  .nixpacks.toml  Procfile  README.md  app.py  generate_test.py  main.py  pl_to_nl.py  pyproject.toml  railway.json  test.py  tthelper.py
.github/workflows/: deploy_render.yaml
FRONTEND/: index.html
docs/: index.html  others.css  script.js
